# toss-share

./: .gitignore  CHANGELOG.md  CHECKLIST.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPLETION_REPORT.md  COMPLETION_VERIFICATION.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION_STATUS.md  FFI_READY.md  FINAL_STATUS.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MKDOCS_SETUP.md  Makefile  NEXT_STEPS.md  PLAN.md  PROJECT_COMPLETE.md  PROJECT_STATUS.md  QUICK_START.md  README.md  README_COMPLETE.md  SECURITY.md  SPECIFICATION.md  STATUS.md  SUMMARY.md  TODO.md  mkdocs.yml  requirements-docs.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  code_quality.yml  docs.yml  nightly.yml  release.yml  security.yml
docs/: FUTURE_ENHANCEMENTS.md  INDEX.md  IOS_ANDROID_IMPLEMENTATION.md  PLATFORM_SPECIFIC.md  README.md  astro.config.mjs  package-lock.json  package.json
docs/.astro/: content-modules.mjs
docs/developer-guide/: api-reference.md  architecture.md  platform-support.md  testing.md
docs/getting-started/: development-setup.md  installation.md  quick-start.md
docs/platform-specific/: android.md  ios.md  linux.md  macos.md  windows.md
docs/public/: CNAME
docs/user-guide/: overview.md  pairing.md  using-toss.md
flutter_app/: frb_options.yaml  pubspec.yaml
flutter_app/android/app/: build.gradle.kts
flutter_app/integration_test/: app_test.dart  simple_test.dart
flutter_app/ios/Runner/: AppDelegate.swift  Info.plist
flutter_app/ios/Runner.xcodeproj/: project.pbxproj
flutter_app/lib/: main.dart
flutter_app/lib/src/: app.dart
flutter_app/linux/: CMakeLists.txt
flutter_app/linux/flutter/: generated_plugins.cmake
flutter_app/linux/runner/: CMakeLists.txt  auto_start.cc  auto_start.h  my_application.cc
flutter_app/macos/Flutter/: GeneratedPluginRegistrant.swift
flutter_app/macos/Runner/: AppDelegate.swift  AutoStart.swift  Info.plist  Release.entitlements
flutter_app/macos/Runner.xcodeproj/: project.pbxproj
flutter_app/rust/: Cargo.toml
flutter_app/rust/src/: frb_generated.rs  lib.rs
flutter_app/rust/src/api/: mod.rs
flutter_app/rust_builder/: pubspec.yaml
flutter_app/rust_builder/android/: build.gradle  settings.gradle
flutter_app/rust_builder/ios/: rust_lib_toss.podspec
flutter_app/rust_builder/linux/: CMakeLists.txt
flutter_app/rust_builder/macos/: rust_lib_toss.podspec
flutter_app/rust_builder/windows/: CMakeLists.txt
flutter_app/test/: widget_test.dart
flutter_app/test/providers/: settings_provider_test.dart
flutter_app/test/widgets/: history_screen_test.dart  home_screen_test.dart  (+2 more)
logs_54233131548/: 1_Rust Checks.txt  2_Relay Server Checks.txt  3_Security Audit.txt  4_Flutter Checks.txt
logs_54233131548/Build (${{ matrix.os }})/: system.txt
logs_54233131548/Flutter Checks/: 11_Post Setup Flutter.txt  12_Post Run actions_checkout@v4.txt  13_Complete job.txt  1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Setup Flutter.txt  4_Install dependencies.txt  system.txt
logs_54233131548/Relay Server Checks/: 14_Post Run actions_checkout@v4.txt  15_Complete job.txt  1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Install Rust toolchain.txt  4_Cache cargo registry.txt  5_Check formatting.txt  system.txt
logs_54233131548/Rust Checks/: 14_Post Run actions_checkout@v4.txt  15_Complete job.txt  1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Install Rust toolchain.txt  4_Cache cargo registry.txt  5_Check formatting.txt  system.txt
logs_54233131548/Security Audit/: 1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Install cargo-audit.txt  4_Run security audit.txt  8_Post Run actions_checkout@v4.txt  9_Complete job.txt  system.txt
logs_54234804672/: 1_Security Audit.txt  2_Relay Server Checks.txt  3_Rust Checks.txt  4_Flutter Checks.txt
logs_54234804672/Build (${{ matrix.os }})/: system.txt
logs_54234804672/Flutter Checks/: 11_Post Setup Flutter.txt  12_Post Run actions_checkout@v4.txt  13_Complete job.txt  1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Setup Flutter.txt  4_Install dependencies.txt  system.txt
logs_54234804672/Relay Server Checks/: 13_Post Cache cargo registry.txt  14_Post Run actions_checkout@v4.txt  15_Complete job.txt  1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Install Rust toolchain.txt  4_Cache cargo registry.txt  5_Check formatting.txt  6_Run clippy.txt  7_Run tests.txt  system.txt
logs_54234804672/Rust Checks/: 14_Post Run actions_checkout@v4.txt  15_Complete job.txt  1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Install Rust toolchain.txt  4_Cache cargo registry.txt  5_Check formatting.txt  6_Run clippy.txt  7_Run tests.txt  system.txt
logs_54234804672/Security Audit/: 1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Install cargo-audit.txt  4_Run security audit.txt  8_Post Run actions_checkout@v4.txt  9_Complete job.txt  system.txt
relay_server/: .env.example  Cargo.toml  Dockerfile  docker-compose.yml
relay_server/src/: config.rs  error.rs  lib.rs  main.rs
relay_server/src/api/: handlers.rs  mod.rs  routes.rs  websocket.rs
relay_server/src/auth/: mod.rs
relay_server/src/db/: mod.rs  models.rs
relay_server/src/relay/: mod.rs
relay_server/tests/: integration_tests.rs
rust_core/: Cargo.toml
rust_core/.cargo/: config.toml
rust_core/src/: error.rs  frb_generated.rs  lib.rs  panic_handler.rs
rust_core/src/api/: mod.rs
rust_core/src/clipboard/: file_handler.rs  formats.rs  handler.rs  linux_display.rs  mod.rs  monitor.rs  rich_text.rs  windows_formats.rs
rust_core/src/crypto/: identity.rs  kdf.rs  key_exchange.rs  mod.rs  pairing.rs  symmetric.rs
rust_core/src/network/: discovery.rs  mod.rs  nat_traversal.rs  relay_client.rs  transport.rs  websocket_transport.rs
rust_core/src/pairing/: coordinator.rs  mod.rs
rust_core/src/protocol/: content.rs  frame.rs  message.rs  mod.rs
rust_core/src/storage/: device_storage.rs  history_storage.rs  mod.rs  secure_storage.rs
scripts/: setup.sh  test-all.sh  verify-ffi-setup.sh
(+71 files in other folders)
