[package]
name = "toss_core"
version = "0.1.0"
edition = "2021"
authors = ["Toss Contributors"]
description = "Core library for Toss - encrypted clipboard sharing"
license = "MIT"
repository = "https://github.com/rennerdo30/toss-share"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Crypto
x25519-dalek = { version = "2", features = ["static_secrets"] }
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.9"
rand_core = "0.6"

# Networking
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rcgen = "0.14"
mdns-sd = "0.17"
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }

# Clipboard
arboard = "3"

# Serialization
serde = { version = "1", features = ["derive"] }
bincode = "1"
serde_json = "1"
base64 = "0.22"

# Async utilities
futures = "0.3"
futures-util = "0.3"

# FFI
flutter_rust_bridge = "2"

# Utilities
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
once_cell = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"

[features]
default = []
