[package]
name = "toss_core"
version.workspace = true
edition.workspace = true
authors = ["Toss Contributors"]
description = "Core library for Toss - encrypted clipboard sharing"
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
# Async runtime
tokio.workspace = true

# Crypto
x25519-dalek.workspace = true
aes-gcm.workspace = true
hkdf.workspace = true
sha2.workspace = true
sha1.workspace = true
hmac.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
rand_core.workspace = true

# Networking
quinn.workspace = true
rustls.workspace = true
rcgen.workspace = true
mdns-sd.workspace = true
tokio-tungstenite.workspace = true
reqwest.workspace = true

# Serialization
serde.workspace = true
bincode.workspace = true
serde_json.workspace = true
base64.workspace = true

# Async utilities
futures.workspace = true
futures-util.workspace = true

# FFI
flutter_rust_bridge.workspace = true

# Storage
rusqlite.workspace = true

# Utilities
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
parking_lot.workspace = true
once_cell.workspace = true
uuid.workspace = true
chrono.workspace = true
hex.workspace = true
image.workspace = true

# Clipboard (desktop only - Android/iOS use Flutter's clipboard)
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
arboard.workspace = true

# Platform-specific secure storage
[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
security-framework.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows.workspace = true
windows-sys.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
secret-service.workspace = true

[dev-dependencies]
tokio-test.workspace = true
tempfile.workspace = true

[features]
default = []

[lints.rust]
# Suppress frb_expand warnings from flutter_rust_bridge
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
