[package]
name = "rust_lib_toss"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
# Include the actual toss_core crate
toss_core = { path = "../../rust_core" }

# Explicitly declare key dependencies to ensure they're available for cross-compilation
# These are re-exported or used transitively from toss_core
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1.49", features = ["full"] }
base64 = "0.22"
hex = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
parking_lot = "0.12"
tracing = "0.1"
rusqlite = { version = "0.31", features = ["bundled"] }
serde_json = "1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
