[package]
name = "rust_lib_toss"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

# Workspace to ensure proper dependency resolution across crates
[workspace]
members = ["."]
# Include toss_core in the workspace resolver
resolver = "2"

[workspace.dependencies]
# Common dependencies shared between crates
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1.49", features = ["full"] }
base64 = "0.22"
hex = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
parking_lot = "0.12"
tracing = "0.1"
rusqlite = { version = "0.31", features = ["bundled"] }
serde_json = "1"
flutter_rust_bridge = "=2.11.1"

[dependencies]
flutter_rust_bridge.workspace = true
# Include the actual toss_core crate
toss_core = { path = "../../rust_core" }
# Explicitly declare key dependencies to ensure they're available for cross-compilation
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
base64.workspace = true
hex.workspace = true
uuid.workspace = true
chrono.workspace = true
futures-util.workspace = true
parking_lot.workspace = true
tracing.workspace = true
rusqlite.workspace = true
serde_json.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
