[package]
name = "rust_lib_toss"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge.workspace = true
toss_core = { path = "../../rust_core" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
